@@ -15,14 +15,16 @@ public class AliasHandler extends Handler implements AliasAPI {
   }
 
   public List<PlayerNameRecord> lookupIPAddress(String address) {
-    InetAddressRecord record = InetAddressRecord.findByAddress(this.plugin.getDatabaseHandler(), address, false);
+    InetAddressRecord record = InetAddressRecord.findByAddress(this.plugin.getDatabaseHandler(), address);
     if (record != null) return record.getPlayerNames();
+    logger.debug("No PlayerNameRecords found, returning empty list");
     return new LinkedList<PlayerNameRecord>();
   }
 
   public List<InetAddressRecord> lookupPlayerName(String playerName) {
-    PlayerNameRecord record = PlayerNameRecord.findByName(this.plugin.getDatabaseHandler(), playerName, false);
+    PlayerNameRecord record = PlayerNameRecord.findByName(this.plugin.getDatabaseHandler(), playerName);
     if (record != null) return record.getAddresses();
+    logger.debug("No InetAddressRecords found, returning empty list");
     return new LinkedList<InetAddressRecord>();
   }
 
